# UM-3-old-early-version

./: CMakeLists.txt  Exceptions.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h  README.md  main.cpp  memory_cl.cpp  memory_cl.h  memory_um3.cpp  memory_um3.h  parser.cpp  parser.h  parser_um_3.cpp  parser_um_3.h  punch_card.txt  punched_card.txt  result.txt
Examples/Ввод 3 вещественных и вывод суммы/: punched_card.txt  result.txt
Examples/Ввод 3 целых и вывод суммы/: punched_card.txt  result.txt
Examples/Ввод n чисел и их вывод/: log.txt  memory.txt  punched_card.txt  result.txt
UM3linux/: Makefile  README.md  UM3  punched_card.txt
include/: Exception.h  Memory.h  Processor.h  parser.h
linux/: Exception.cpp  Exception.h  Memory.h  Processor.cpp  UM3  UM3.cpp  parser.cpp
src/: CMakeLists.txt  Memory.cpp  Processor.cpp  UM3.cpp  main.cpp  parser.cpp
windows/: punched_card.txt
